# raygent

./: .coveragerc  .gitignore  .ignore  .isort.cfg  .pytest.ini  CODEOWNERS  LICENSE.md  README.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: codecov.yml  docs.yml  tests.yml
docs/: .nav.yml  development.md  gen_ref_pages.py  manager.md  runner.md  tasks.md
docs/css/: base.css
docs/examples/: .nav.yml
docs/examples/mc-pi/: .nav.yml  index.ipynb
docs/examples/mean/: .nav.yml  index.ipynb
raygent/: __init__.py  batch.py  dtypes.py  manager.py  runner.py  task.py  worker.py
raygent/results/: __init__.py  _list.py  accumulator.py  base.py  handler.py  list_handler.py  mean.py  result.py
raygent/results/handlers/: __init__.py  collector.py  handler.py  online_mean.py  sum.py
raygent/savers/: __init__.py  _hdf5.py  _numpy.py  _zarr.py  core.py
raygent/workflow/: __init__.py  dag.py  edge.py  envelope.py  executors.py  graph.py  helpers.py  node.py  queue.py  runner.py  runners.py  utils.py  workflow.py
tests/: conftest.py  test_batching.py  test_mean.py  test_taskmanager.py
tests/managers/: test_task_chunks.py  test_taskmanager.py
tests/runners/: test_batching.py  test_task_chunks.py  test_task_runners.py
tests/savers/: test_saver_numpy.py  test_saver_zarr.py
tests/workflows/: test_workflow_serial.py  test_workflow_simple.py
