[project]
name = "raygent"
description = "Parallelism, Delegated"
authors = [
    {name = "oasci", email = "us@oasci.org"}
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"

# TODO: Keep this here until pixi releases building capabilities
dependencies = [
    "loguru>=0.7.2,<1.0",
    "ray>=2.10.0,<3",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]

[tool.setuptools.packages.find]
where = ["."]
include = ["raygent*"]

[tool.setuptools_scm]
write_to = "raygent/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"

