[project]
name = "raygent"
description = "Parallelism, Delegated"
authors = [
    {name = "Scienting Studio", email = "us@scient.ing"}
]
maintainers = [
    {name = "Alex Maldonado", email = "alex@scient.ing"}
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "loguru>=0.7.2,<1.0",
    "numpy>=2.2.0,<3",
    "polars>=1.15.0,<2",
]

[project.optional-dependencies]
workflow = [
    "ray>=2.10.0,<3",
]

[project.urls]
Documentation = "https://raygent.scient.ing"
Repository = "https://github.com/scienting/raygent"
Issues = "https://github.com/scienting/raygent/issues"
Changelog = "https://github.com/scienting/raygent/blob/main/CHANGELOG.md"


[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]

[tool.setuptools.packages.find]
where = ["."]
include = ["raygent*"]

[tool.setuptools_scm]
write_to = "raygent/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"

